--- a/Web/app/components/shared/header/headerView.html
+++ b/Web/app/components/shared/header/headerView.html
@@ -1,31 +1,19 @@
 <nav class="navbar navbar-default">
   <div class="col-sm-9 col-sm-offset-3">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#/designer">Logo Designer</a>
+    <div class="navbar-header hidden-xs">
+
+      <a class="navbar-brand hidden-xs" href="#/designer">Logo Designer</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
+     <div class="navbar-header-mobile visible-xs">
+    	<div class="visible-xs">
+    		<img src="assets/img/logo2.png" />
+    		<h4>Logo Designer</h4>
+    	</div>
+
+      <a class="navbar-brand hidden-xs" href="#/designer">Logo Designer</a>
+    </div>
+
   </div><!-- /.container-fluid -->
 </nav>
