--- a/Web/app/components/designer/_preview.html
+++ b/Web/app/components/designer/_preview.html
@@ -36,6 +36,15 @@
 			</div>
 		</div>
 
+		<div class="item">
+	  	<div class="back">
+				<img ng-src="assets/img/mug_background.png"/>
+			</div>
+			<div class="front">
+				<img ng-src="{{preview}}" style="margin-left: 33px;">
+			</div>
+		</div>
+
 		
 </div>
 
