--- a/Web/app/components/shared/header/headerView.html
+++ b/Web/app/components/shared/header/headerView.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" ng-controller="DesignerCtrl">
   <div class="col-sm-9 col-sm-offset-3">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header hidden-xs">
 
-      <a class="navbar-brand hidden-xs" href="#/designer">Logo Designer</a>
+      <a class="navbar-brand" href="#/designer">Logo Designer</a>
     </div>
 
      <div class="navbar-header-mobile visible-xs">
