--- a/Web/assets/css/bootstrap-overrides.css
+++ b/Web/assets/css/bootstrap-overrides.css
@@ -1,4 +1,7 @@
-
+label{
+  color: gray;
+  font-weight: 100;
+}
 /* ----------------------------------NavBar---------------------------
  --------------------------------------------------------------------*/
 
