--- a/Web/app/components/designer/_controls-text.html
+++ b/Web/app/components/designer/_controls-text.html
@@ -1,32 +1,31 @@
 <div class="col-sm-3">
 	<div class="form-group">
-	  <label class="left gray" for="textcolorpicker">Text color</label>
-		<input type="text" id='textcolorpicker' ng-model="text.color" ng-change="changeTextColor()" />
+	  <label class="left" for="textcolorpicker">Text color</label>
+		<input class="form-control" type="text" id='textcolorpicker' ng-model="text.color" ng-change="changeTextColor()" />
 	</div>
 </div>
 
 <div class="col-sm-3">
 	<div class="form-group">
-	  <label class="left gray" for="textfontselect">Font family</label>
+	  <label class="left" for="textfontselect">Font family</label>
 
-	   <select class="form-control" id="textfontselect" ng-model="text.font" ng-options="font.name for font in fonts" ng-change="changeTextFont()"></select>
+	   <select class="form-control" id="textfontselect" ng-model="text.font" ng-options="font.name for font in fonts" ng-change="changeTextFontFamily()"></select>
 
 	 </div>
  </div>
 
 <div class="col-sm-3">
 	<div class="form-group">
-	  <label class="left gray" for="textfontselect">Font style</label>
-	   <select class="form-control" id="textfontselect" ng-model="text.font.style" ng-options="style.value as style.name for style in text.font.styles" ng-change="changeTextFont()"></select>
-
+	  <label class="left" for="textfontselect">Font style</label>
+	   <select class="form-control" id="textfontselect" ng-model="text.font.style" ng-options="style.value as style.name for style in text.font.styles" ng-change="changeTextFontStyle()"></select>
 
 	 </div>
  </div>
 
  <div class="col-sm-3">
 	<div class="form-group">
-	  <label class="left gray" for="textfontselect">Font weight</label>
-    <select class="form-control" id="textfontselect" ng-model="text.font.weight" ng-options="weight.value as weight.name for weight in text.font.weights" ng-change="changeTextFont()"></select>
+	  <label class="left" for="textfontselect">Font weight</label>
+    <select class="form-control" id="textfontselect" ng-model="text.font.weight" ng-options="weight.value as weight.name for weight in text.font.weights" ng-change="changeTextFontWeight()"></select>
 
 	 </div>
  </div>
@@ -34,16 +33,18 @@
 
 
 <script type="text/javascript">
+
 	$("#textcolorpicker").spectrum({
   	color: "#000",
-  	preferredFormat: "rgb"
+  	preferredFormat: "hex",
+    showInput: true,
+    disabled: true
 	});
 
 	$("#bordercolorpicker").spectrum({
   	color: "#000",
   	preferredFormat: "rgb"
 	});
-	$('#controls').hide();
 
 		// With JQuery
 	$('#ex1').slider({
