--- a/Web/app/components/shared/header/headerView.html
+++ b/Web/app/components/shared/header/headerView.html
@@ -1,19 +1,31 @@
 <nav class="navbar navbar-default" ng-controller="DesignerCtrl">
-  <div class="col-sm-9 col-sm-offset-3">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <!--<div class="navbar-header hidden-xs">
+  <div class="navbar-header">
 
-      <a class="navbar-brand" href="#/designer">Logo Designer</a>
-    </div>-->
+    <a class="navbar-brand" href="#/designer">Compose your logo</a>
+  </div>
 
-     <div class="navbar-header-mobile visible-xs">
-    	<div class="visible-xs">
-    		<img src="assets/img/logo2.png" />
-    		<h4>Logo Designer</h4>
-    	</div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="javascript:void(0)">How it works</a></li>
+      <li><a href="javascript:void(0)">Pricing</a></li>
+      <li class="pricing"><a href="javascript:void(0)">Free trial</a></li>
+      <li><a href="javascript:void(0)">About</a></li>
+      <li><a href="javascript:void(0)">Login</a></li>
+      <li class="contact">
+        <a href="#"><i class="glyphicon glyphicon-comment" aria-label="send a message" aria-hidden="true"></i></a>
+      </li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
 
-      <a class="navbar-brand hidden-xs" href="#/designer">Logo Designer</a>
-    </div>
+   <div class="navbar-header-mobile visible-xs">
+  	<div class="visible-xs">
+  		<img src="assets/img/logo2.png" />
+  		<h4>Logo Designer</h4>
+  	</div>
+
+    <a class="navbar-brand hidden-xs" href="#/designer">Logo Designer</a>
 
   </div><!-- /.container-fluid -->
 </nav>
