--- a/Web/app/components/designer/_controls-symbol.html
+++ b/Web/app/components/designer/_controls-symbol.html
@@ -1,10 +1,10 @@
-
-<div class="col-sm-4 col-sm-offset-4">
-	<div class="form-group ">
-	 	<label class="left" for="fillcolorpicker">Fill color</label>
-	 	<input class="form-control" type="text" id='fillcolorpicker' ng-model="image.fillcolor" ng-change="changeFillColor()" />
-	</div>
-</div>
+<ul class="list-inline">
+	<li>
+		<div class="form-group ">
+	 		<input class="form-control" type="text" id='fillcolorpicker' ng-model="image.fillcolor" ng-change="changeFillColor()" />
+		</div>
+	</li>
+</ul>
 
 
 <script type="text/javascript">
