--- a/Web/app/components/designer/designerView.html
+++ b/Web/app/components/designer/designerView.html
@@ -1,18 +1,18 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-12 col-lg-3 sidebar">
+		<div class="col-md-3 sidebar">
 
 			<header class="row centered">
 				<img src="assets/img/logo.png" alt="exentriq logo designer" />
 			</header>
 
 			<div class="form-group">
-  			<label class="centered" for="companyName">Logo name</label>
-				<input class="form-group" id="companyName" type="text" placeholder="Name" ng-model="name" ng-change="setLogoName(name)" class="centered">
+  			<label for="companyName">Company name</label>
+				<input class="form-group" id="companyName" type="text" placeholder="Name" ng-model="name" ng-change="setLogoName(name)">
 			</div>
 
 			<div class="form-group">
-				<input id="searchSymbol" class="form-group" type="text" placeholder="Search Icons" ng-model="query" class="centered">
+				<input id="searchSymbol" class="form-group" type="text" placeholder="Search icons..." ng-model="query" class="centered">
 			</div>
 
 			<div class="row">
@@ -27,26 +27,39 @@
 
 		</div>
 
-		<div class="col-sm-12 col-lg-9 main">
-			<div id="controls-container" class="row">
-				<div id="controls-symbol" class="controls col-lg-9">
+		<div class="col-md-9 main">
+			<div class="row">
+				 <ng-include src="'app/components/shared/header/headerView.html'" ></ng-include>
+			</div>
+
+			<div class="row controls-container with-margin">
+				<div id="controls-symbol" class="controls col-md-9">
 					<ng-include src="'app/components/designer/_controls-symbol.html'" scope="canvas"></ng-include>
 				</div>
-				<div id="controls-text" class="controls col-lg-9">
+				<div id="controls-text" class="controls col-md-9">
 					<ng-include src="'app/components/designer/_controls-text.html'" scope="canvas"></ng-include>
 				</div>
-				<div class="col-lg-3">
-					<a class="save-button" href="javascript:void(0)" ng-click="saveLogo()">Save and Print</a>
+				<div class="col-md-3">
+					<a class="save-button" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">Save & Print</a>
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row with-margin">
 				<canvas id="c"></canvas>
 			</div>
 
-			<div id="preview" class="row">
+			<div id="preview" class="row with-margin">
 				<ng-include src="'app/components/designer/_preview.html'" scope="preview"></ng-include>
 			</div>
 		
 	</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+       <iframe src="http://logoapp.stage.exeq.me/"></iframe>
+    </div>
+  </div>
 </div>
